

CHANGES IN VERSION 0.2.1

NEW FEATURES
  - `select_greedy` has an `include_ties` option that will include multiple pairs
    for a record when these pairs have an equal weight/score.

  - `pair_minsim` and `cluster_pair_minsim` now have an `on_blocking` option
    that functions similar to the `on` argument of `pair_blocking`: pairs are
    only generated when the agree exactly on the blocking keys. 

  - When selecting pairs using a threshold. Pairs are now selected when their
    score is above or *equal to* the threshold. This has an effect for all of 
    the `select_` functions.

BUG FIXES

  - `select_greedy` gave an error when the set of pairs is empty. 

  - The `by_x` and `by_y` arguments were not handled correctly. Fixed.

CHANGES IN VERSION 0.2.0

NEW FEATURES:

  - `merge_pairs` combines two sets of pairs into one (like `rbind`). Especially 
    useful in combination with `pair_blocking` to generate pairs that are blocked
    on multiple keys (e.g. they have match on either `postcode` or `lastname`).

BUG FIXES:

  - `pairs_minsim` gave an error when the number of records squared is larger 
    the maximum integer value.

  - `pairs_minsim` did not generate pairs when one of the keys contained 
    missing values.
