@@ -14,6 +14,8 @@ S3method(print,problink_em)
 S3method(print,summary_problink_em)
 S3method(rbind,cluster_pairs)
 S3method(rbind,pairs)
+S3method(score_simple,cluster_pairs)
+S3method(score_simple,pairs)
 S3method(select_greedy,cluster_pairs)
 S3method(select_greedy,pairs)
 S3method(select_n_to_m,cluster_pairs)
@@ -46,6 +48,7 @@ export(pair)
 export(pair_blocking)
 export(pair_minsim)
 export(problink_em)
+export(score_simple)
 export(select_greedy)
 export(select_n_to_m)
 export(select_threshold)
